public interface Quackable extends QuackObservable{
    public void quack();
}